--- a/CBI/tmux/module.lua.tmpl
+++ b/CBI/tmux/module.lua.tmpl
@@ -11,9 +11,8 @@ whatis("Description: tmux is a terminal multiplexer. It lets you switch easily b
 
 load("libevent")
 
-local root = os.getenv("CBI_APPS_ROOT")
-local path = pathJoin(root, "manual")
+local root = os.getenv("SOFTWARE_ROOT_CBI")
+local home = pathJoin(root, name .. "-" .. version)
 
-local home = pathJoin(path, name .. "-" .. version)
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
