--- a/CBI/tree/module.lua.tmpl
+++ b/CBI/tree/module.lua.tmpl
@@ -9,9 +9,8 @@ whatis("Keywords: files, utility")
 whatis("URL: http://mama.indstate.edu/users/ice/tree/, ")
 whatis("Description: Tree is a recursive directory listing command that produces a depth indented listing of files, which is colorized ala dircolors if the `LS_COLORS` environment variable is set and output is to tty.. Example: `tree --help`.")
 
-local root = os.getenv("CBI_APPS_ROOT")
-local path = pathJoin(root, "manual")
+local root = os.getenv("SOFTWARE_ROOT_CBI")
+local home = pathJoin(root, name .. "-" .. version)
 
-local home = pathJoin(path, name .. "-" .. version)
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
