--- a/CBI/byobu/module.lua.tmpl
+++ b/CBI/byobu/module.lua.tmpl
@@ -9,10 +9,9 @@ whatis("Keywords: terminal, SSHH")
 whatis("URL: http://byobu.org, https://github.com/dustinkirkland/byobu")
 whatis("Description: Byobu is an elegant enhancement of the otherwise functional, plain, practical GNU Screen. Byobu includes an enhanced profile, configuration utilities, and system status notifications for the GNU screen window manager as well as the Tmux terminal multiplexer. Example: `byobu --version`")
 
-local root = os.getenv("CBI_APPS_ROOT")
-local path = pathJoin(root, "manual")
+local root = os.getenv("SOFTWARE_ROOT_CBI")
+local home = pathJoin(root, name .. "-" .. version)
 
-local home = pathJoin(path, name .. "-" .. version)
 prepend_path("PATH",  pathJoin(home, "bin"))
 prepend_path("MANPATH",  pathJoin(home, "share", "man"))
 
