Be agile to SOFTWARE_ROOT_CBI if set

--- a/CBI/tree/module.lua.tmpl
+++ b/CBI/tree/module.lua.tmpl
@@ -13,4 +13,4 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
-prepend_path("MANPATH", pathJoin(home, "share", "man"))
+prepend_path("MANPATH", pathJoin(home, "man"))
