* Add r/3.6.0 * WORKAROUND: Setting R_INSTALL_STAGED=false for new R 3.6.0; for unknown reasons, install.packages() fail otherwise; could be file-system specific (https://twitter.com/henrikbengtsson/status/1122262462869299200) * Local CRAN mirror: Setting in-house env var R_LOCAL_CRAN=file://... that can be used as options(repos=Sys.getenv("R_LOCAL_CRAN")) etc.

--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -15,3 +15,10 @@ local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
+
+if version == "3.6.0" then
+  setenv("R_INSTALL_STAGED", "false")
+end
+
+-- In-house env var for local CRAN mirror
+setenv("R_LOCAL_CRAN", "file://" .. pathJoin(os.getenv("CBI_SHARED_ROOT"), "mirrors", "r-mirrors", "cran"))
