--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -34,7 +34,7 @@ setenv("R_LOCAL_CRAN", "file://" .. pathJoin(os.getenv("CBI_SHARED_ROOT"), "mirr
 -- we will not change this for such users.  The heuristic is to check if the
 -- built-in R_LIBS_USER folder already exists. If not, then it's safe to use
 -- one specific to the CBI stack.
-local r_libs_user = capture("Rscript -e \"cat(Sys.getenv('R_LIBS_USER'))\"")
+local r_libs_user = capture("R_LIBS_USER= Rscript -e \"cat(normalizePath(Sys.getenv('R_LIBS_USER'), mustWork=FALSE))\"")
 if (not isDir(r_libs_user)) then
-  setenv("R_LIBS_USER", path .. "-CBI")
+  setenv("R_LIBS_USER", r_libs_user .. "-CBI")
 end
