--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -24,8 +24,11 @@ if version == "3.6.0" then
   setenv("R_INSTALL_STAGED", "false")
 end
 
--- In-house env var for local CRAN mirror
-setenv("R_LOCAL_CRAN", "file://" .. pathJoin(os.getenv("CBI_SHARED_ROOT"), "mirrors", "r-mirrors", "cran"))
+-- In-house env var for R repositories mirrored locally
+local r_repos_root = pathJoin(os.getenv("CBI_SHARED_ROOT"), "mirrors", "r-mirrors")
+setenv("R_REPOS_ROOT", r_repos_root)
+setenv("R_REPOS_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
+setenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 
 -- R packages built from native code and installed using R from EPEL is *not*
 -- always compatible with ditto installed using R from the CBI software stack.
