--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -18,17 +18,19 @@ prepend_path("MANPATH", pathJoin(home, "share", "man"))
 
 -- A custom installed R may not be compatible with R from the Linux distro
 -- TODO: Enable this /HB 2019-08-14
--- setenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
+-- pushenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
 
 if version == "3.6.0" then
-  setenv("R_INSTALL_STAGED", "false")
+  pushenv("R_INSTALL_STAGED", "false")
+else
+  pushenv("R_INSTALL_STAGED", "true")
 end
 
 -- In-house env var for R repositories mirrored locally
 local r_repos_root = pathJoin(os.getenv("CBI_SHARED_ROOT"), "mirrors", "r-mirrors")
-setenv("R_REPOS_ROOT", r_repos_root)
-setenv("R_REPOS_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
-setenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
+pushenv("R_REPOS_ROOT", r_repos_root)
+pushenv("R_REPOS_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
+pushenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 
 -- R packages built from native code and installed using R from EPEL is *not*
 -- always compatible with ditto installed using R from the CBI software stack.
@@ -39,5 +41,5 @@ setenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 -- one specific to the CBI stack.
 local r_libs_user = capture("R_LIBS_USER= Rscript -e \"cat(normalizePath(Sys.getenv('R_LIBS_USER'), mustWork=FALSE))\"")
 if (not isDir(r_libs_user)) then
-  setenv("R_LIBS_USER", r_libs_user .. "-CBI")
+  pushenv("R_LIBS_USER", r_libs_user .. "-CBI")
 end
