--- a/CBI/vcftools/module.lua.tmpl
+++ b/CBI/vcftools/module.lua.tmpl
@@ -14,6 +14,6 @@ local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
-setenv("PERL5LIB", pathJoin(home, "share", "perl5"))
+pushenv("PERL5LIB", pathJoin(home, "share", "perl5"))
 
 
