--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -16,10 +16,7 @@ local home = pathJoin(root, name .. "-" .. version)
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("MANPATH", pathJoin(home, "share", "man"))
 
--- A custom installed R may not be compatible with R from the Linux distro
--- TODO: Enable this /HB 2019-08-14
--- pushenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
-
+-- WORKAROUND: R 3.6.0 is not compatible with BeeGFS
 if version == "3.6.0" then
   pushenv("R_INSTALL_STAGED", "false")
 else
@@ -39,7 +36,4 @@ pushenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 -- we will not change this for such users.  The heuristic is to check if the
 -- built-in R_LIBS_USER folder already exists. If not, then it's safe to use
 -- one specific to the CBI stack.
-local r_libs_user = capture("R_LIBS_USER= Rscript -e \"cat(normalizePath(Sys.getenv('R_LIBS_USER'), mustWork=FALSE))\"")
-if (not isDir(r_libs_user)) then
-  pushenv("R_LIBS_USER", r_libs_user .. "-CBI")
-end
+pushenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
