--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: high-throughput sequencing")
 whatis("URL: http://snpeff.sourceforge.net/")
-whatis("Description: SnpEff is a variant annotation and effect prediction tool. It annotates and predicts the effects of variants on genes (such as amino acid changes). Example: `snpEff -help`  and `ClinEff -help`, which are aliases for `java -jar $SNPEFF_HOME/snpEff/snpEff.jar -help` and `java -jar $SNPEFF_HOME/clinEff/ClinEff.jar -help`.")
+whatis("Description: SnpEff is a variant annotation and effect prediction tool. It annotates and predicts the effects of variants on genes (such as amino acid changes). Example: `snpEff -help`, `SnpSift -help`,  and `ClinEff -help`, which are aliases for `java -jar $SNPEFF_HOME/snpEff/snpEff.jar -help`, `java -jar $SNPEFF_HOME/snpEff/SnpSift.jar -help`, and `java -jar $SNPEFF_HOME/clinEff/ClinEff.jar -help`.")
 
 local name = "snpEff"
 local root = os.getenv("SOFTWARE_ROOT_CBI")
@@ -15,10 +15,14 @@ local home = pathJoin(root, name .. "-" .. version)
 
 pushenv("SNPEFF_HOME", home)
 
-local jarfile = pathJoin(home, "snpEff/snpEff.jar")
+local jarfile = pathJoin(home, "snpEff", "snpEff.jar")
 pushenv("SNPEFF", jarfile)
 set_alias("snpEff", "java -jar " .. jarfile)
 
-local jarfile = pathJoin(home, "clinEff/ClinEff.jar")
+local jarfile = pathJoin(home, "snpEff", "SnpSift.jar")
+pushenv("SNPSIFT", jarfile)
+set_alias("SnpSift", "java -jar " .. jarfile)
+
+local jarfile = pathJoin(home, "clinEff", "ClinEff.jar")
 pushenv("CLINEFF", jarfile)
 set_alias("ClinEff", "java -jar " .. jarfile)
