--- a/CBI/rclone/module.lua.tmpl
+++ b/CBI/rclone/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: files, transfers")
 whatis("URL: https://rclone.org/, https://github.com/rclone/rclone")
-whatis("Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, o remote file systems, and in the cloud.  Example: `rclone --version`, `rclone --help`, `rclone onfig`, and `info rclone`.")
+whatis("Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, or remote file systems, and in the cloud.  Example: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
