jags: set env 'JAGS_LIB' so installation of R package 'runjags' works out of the box

--- a/CBI/jags/module.lua.tmpl
+++ b/CBI/jags/module.lua.tmpl
@@ -17,3 +17,6 @@ prepend_path("MANPATH", pathJoin(home, "share", "man"))
 prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
 prepend_path("PKG_CONFIG_PATH", pathJoin(home, "lib", "pkgconfig"))
 
+-- AD HOC: Help R package 'runjags' find the proper subfolder for libjags
+-- when built from source (from README of the runjags package)
+pushenv("JAGS_LIB", pathJoin(home, "lib"))
