--- a/CBI/emacs/module.lua.tmpl
+++ b/CBI/emacs/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: editor, text")
 whatis("URL: https://www.gnu.org/software/emacs/")
-whatis("Description: At its core is an interpreter for Emacs Lisp, a dialect of the Lisp programming language with extensions to support text editing. Example: `emacs --version` and `emacs -nw`.")
+whatis("Description: At its core is an interpreter for Emacs Lisp, a dialect of the Lisp programming language with extensions to support text editing. Example: `emacs --version` and `emacs -nw`. Warning: Only the most recent version of this software will be kept.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
