--- a/CBI/shellcheck/module.lua.tmpl
+++ b/CBI/shellcheck/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming, shell, sh, bash, dash, ksh")
 whatis("URL: https://www.shellcheck.net/, https://github.com/koalaman/shellcheck/")
-whatis("Description: ShellCheck finds bugs in your shell scripts.  Example: `shellcheck --version` and `shellcheck -x ~/.bashrc`.")
+whatis("Description: ShellCheck finds bugs in your shell scripts.  Example: `shellcheck --version` and `shellcheck -x ~/.bashrc`.  Warning: Only the most recent version of this software will be kept.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
