--- a/CBI/htop/module.lua.tmpl
+++ b/CBI/htop/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: system, utility")
-whatis("URL: http://hisham.hm/htop/")
+whatis("URL: https://htop.dev")
 whatis("Description: `htop` is an interactive process viewer for Unix systems. It is a text-mode application (for console or X terminals) and requires ncurses. Example: `htop`. Warning: Only the most recent version of this software will be kept.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
