CONSISTENCY: Using colon separated in the title for all modules

--- a/CBI/bat/module.lua.tmpl
+++ b/CBI/bat/module.lua.tmpl
@@ -1,5 +1,5 @@
 help([[
-bat - A cat(1) Clone with Syntax Highlighting and Git Integration
+bat: A cat(1) Clone with Syntax Highlighting and Git Integration
 ]])
 
 local name = myModuleName()
