--- a/CBI/htop/module.lua.tmpl
+++ b/CBI/htop/module.lua.tmpl
@@ -1,5 +1,5 @@
 help([[
-htop - An Interactive Process Viewer for Unix
+htop: An Interactive Process Viewer for Unix
 ]])
 
 local name = myModuleName()
