--- a/CBI/ripgrep/module.lua.tmpl
+++ b/CBI/ripgrep/module.lua.tmpl
@@ -1,5 +1,5 @@
 help([[
-ripgrep - Recursively Searches Directories for a Regex Pattern
+ripgrep: Recursively Searches Directories for a Regex Pattern
 ]])
 
 local name = myModuleName()
