--- a/CBI/bat/module.lua.tmpl
+++ b/CBI/bat/module.lua.tmpl
@@ -14,3 +14,4 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", home)
+prepend_path("MANPATH", pathJoin(home, "man", "man1"))
