--- a/CBI/bowtie/module.lua.tmpl
+++ b/CBI/bowtie/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
 whatis("URL: http://bowtie-bio.sourceforge.net/index.shtml")
-whatis("Description: Bowtie is an ultrafast, memory-efficient short read aligner.  Note: This is Bowtie v1 - not v2_.  Example: `bowtie --version` and `ls $BOWTIE_HOME/{genomes,indexes}`")
+whatis("Description: Bowtie is an ultrafast, memory-efficient short read aligner.  Note: This is Bowtie v1 - _not v2_.  Example: `bowtie --version` and `ls $BOWTIE_HOME/{genomes,indexes}`")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
