--- a/CBI/sratoolkit/module.lua.tmpl
+++ b/CBI/sratoolkit/module.lua.tmpl
@@ -6,8 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://ncbi.github.io/sra-tools/")
-whatis("GitHub: https://github.com/ncbi/sra-tools")
+whatis("URL: https://ncbi.github.io/sra-tools/, https://github.com/ncbi/sra-tools")
 whatis("Description: The SRA Toolkit and SDK from NCBI is a collection of tools and libraries for using data in the INSDC Sequence Read Archives. Example: `fastq-dump --help`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
