--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -41,3 +41,10 @@ pushenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 -- built-in R_LIBS_USER folder already exists. If not, then it's safe to use
 -- one specific to the CBI stack.
 pushenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
+
+
+-- WORKAROUND: gert 1.1.0 (2021-01-25) installs toward a static libgit2 that
+-- gives 'Illegal instruction' on some hosts (with older CPUs?)
+-- See https://github.com/r-lib/gert/issues/117
+pushenv("USE_SYSTEM_LIBGIT2", "true")
+
