--- a/CBI/bashdb/module.lua.tmpl
+++ b/CBI/bashdb/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: bash, shell, debug")
-whatis("URL: http://bashdb.sourceforge.net/, https://sourceforge.net/p/bashdb/code/ci/master/tree/, https://sourceforge.net/p/bashdb/bugs/")
+whatis("URL: http://bashdb.sourceforge.net/, https://sourceforge.net/p/bashdb/code/ci/master/tree/, https://sourceforge.net/p/bashdb/bugs/, https://sourceforge.net/projects/bashdb/files/bashdb/")
 whatis("Description: The Bash Debugger Project is a source-code debugger for bash that follows the gdb command syntax.  Example: `bashdb --help`, `bash --version`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
