--- a/CBI/htslib/module.lua.tmpl
+++ b/CBI/htslib/module.lua.tmpl
@@ -17,3 +17,8 @@ prepend_path("MANPATH", pathJoin(home, "share", "man"))
 prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
 prepend_path("PKG_CONFIG_PATH", pathJoin(home, "lib", "pkgconfig"))
 
+
+-- Warn about bug https://github.com/samtools/htslib/issues/1236
+if (mode() == "load" and version == "1.11") then
+  LmodMessage("MODULE WARNING: " .. name .. " " .. version .. " has a bug that results in valid but incorrect CIGAR strings. Because of this, it is recommended to use an older or a new version instead. For details, see https://github.com/samtools/htslib/issues/1236")
+end
