cutadapt: Forgot description

--- a/CBI/cutadapt/module.lua.tmpl
+++ b/CBI/cutadapt/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, genome")
 whatis("URL: https://github.com/marcelm/cutadapt")
-whatis("Description: . Example: `cutadapt --version` and `cutadapt --help`.")
+whatis("Description: Cutadapt finds and removes adapter sequences, primers, poly-A tails and other types of unwanted sequence from your high-throughput sequencing reads. Example: `cutadapt --version` and `cutadapt --help`.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
