cluster-utils: Add custom 'ctopx' alias

--- a/CBI/cluster-utils/module.lua.tmpl
+++ b/CBI/cluster-utils/module.lua.tmpl
@@ -7,10 +7,10 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: slurm, scheduler, utility")
 whatis("URL: https://github.com/molgenis/cluster-utils/")
-whatis("Description: Collection of utilities / helper scripts to make life easier on HPC clusters.  Example: `ctop`. Warning: Only the most recent version of this software will be kept.")
+whatis("Description: Collection of utilities / helper scripts to make life easier on HPC clusters.  Example: `ctop` and `ctopx` (silence 'Invalid user id' output). Warning: Only the most recent version of this software will be kept.")
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
-
+set_alias("ctopx", "ctop 2> >(grep -vF 'Invalid user id')")
