--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -9,6 +9,19 @@ whatis("Keywords: Programming, Statistics")
 whatis("URL: https://www.r-project.org/")
 whatis("Description: The R programming language. Examples: `R --version` and `Rscript --version`.")
 
+function is_empty(s)
+  return((s == nil) or (s == ""))
+end
+
+function has_envvar(name)
+  return(not is_empty(os.getenv(name)))
+end
+
+function on_dev_node()
+  -- Assume development node unless Slurm or SGE environment variables are set
+  return(not (has_envvar("SLURM_CLUSTER_NAME") or has_envvar("JOB_ID")))
+end
+
 local name = "R"
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
@@ -26,15 +39,19 @@ else
   pushenv("R_INSTALL_STAGED", "true")
 end
 
-local gv
+local r_libs_user="~/R/%p-library/%v-CBI"
 
 if (v >= "4.1.0") then
-  gv = string.gsub(version, v, "")
+  local gv = string.gsub(version, v, "")
   gv = string.gsub(gv, "-alpha", "")
   gv = string.gsub(gv, "-beta", "")
   gv = string.gsub(gv, "-gcc", "")
   if (gv > "4") then
-    depends_on("scl-devtoolset/" .. gv)
+    r_libs_user=r_libs_user .. "-gcc" .. gv
+    -- SCL devtoolset is only available on compute nodes
+    if on_dev_node() then
+      depends_on("scl-devtoolset/" .. gv)
+    end
   end
 end
 
@@ -55,7 +72,7 @@ pushenv("R_LOCAL_CRAN", "file://" .. pathJoin(r_repos_root, "cran"))
 -- we will not change this for such users.  The heuristic is to check if the
 -- built-in R_LIBS_USER folder already exists. If not, then it's safe to use
 -- one specific to the CBI stack.
-pushenv("R_LIBS_USER","~/R/%p-library/%v-CBI")
+pushenv("R_LIBS_USER", r_libs_user)
 
 
 -- WORKAROUND: gert 1.1.0 (2021-01-25) installs toward a static libgit2 that
